# symdexer

./: .gitignore  README.md  pyproject.toml
src/symdexer/: __main__.py  __version__.py  cache.py  main.py  modules.py  parser.py  settings.py  symbols.py  types.py
vscode/: CHANGELOG.md  LICENSE.txt  README.md  package-lock.json  package.json  requirements.txt
vscode/bundled/tool/: script.py
vscode/src/: commands.ts  extension.ts  util.ts
vscode/src/common/: config.ts  fsExtra.ts  python.ts  subproc.ts  vsapi.ts
vscode/symdexer/: .gitignore  CHANGELOG.md  README.md  bundle-libs.py  package-lock.json  package.json  requirements.txt
vscode/symdexer/src/: commands.ts  config.ts  extension.ts  util.ts
