[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "symdexer"
version = "0.2.5"
authors = [
  { name="AntiMach", email="themachinumps@gmail.com" },
]
description = "A CLI for finding and indexing symbols"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]


[project.scripts]
symdexer = "symdexer.main:main"

[project.urls]
"Homepage" = "https://github.com/antimach/symdexer"
